--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,20 @@
-@font-face {
-  font-family: 'Countryside';
-  font-size: '1.99rem';
-  src: local('Countryside'), url(./fonts/CountrysideRegular.ttf) format('truetype');
+
+::-webkit-scrollbar {
+  width: 0.8em;
+  overflow-y: auto;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.03);
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: darkgrey;
 }
